# wildlife_api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
app/: dependencies.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  auth.py  users.py  wildlife.py
app/core/: config.py  logging.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  user.py  wildlife.py
app/repositories/: __init__.py  user.py  wildlife.py
app/schemas/: __init__.py  token.py  user.py  wildlife.py
app/utils/: security.py
migrations/: env.py
migrations/versions/: 12646960cc1e_tables_added.py  2b4a1e2b4ec5_table_updated.py  5141a9d237c7_table_updated.py  bd154bb1b29d_table_updated.py
