[tool.poetry]
name = "wild-life-api"
version = "0.1.0"
description = "A modular FastAPI application with SQLAlchemy, Alembic, and PostgreSQL"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = "0.23.2"
sqlalchemy = "2.0.23"
alembic = "1.12.1"
oracledb = {version = "^2.2.0", extras = ["future"]}
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
email-validator = "2.1.0.post1"
python-dotenv = "1.0.0"
python-jose = "^3.4.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false